fixed anchor jumping

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,10 @@ body{
 	width: 100%;
 	height: 70px;
 	position: fixed;
-	background: rgba(15,81,147,0.5);
+	background: rgba(0,0,0,0.5);
+	-webkit-box-shadow: 0 1px 5px 1px black;
+	   -moz-box-shadow: 0 1px 5px 1px black;
+	        box-shadow: 0 1px 5px 1px black;
 }
 
 #top_nav{
@@ -21,12 +24,13 @@ body{
 	height: 70px;
 	margin: 0 auto;
 	padding: 0;
+	
 }
 
 #top_nav .nav_item{
 	float: left;
 	display: block;
-	width: 20%;
+	width: 16.5%;
 	height: 40px;
 	padding: 15px 0;
 	font-size: 14px;
@@ -37,10 +41,22 @@ body{
 
 #top_nav .nav_item.active{
 	background: rgba(44,129,214,1);
+	-webkit-box-shadow: inset 0 8px 6px -6px rgba(74,159,244,1);
+	   -moz-box-shadow: inset 0 8px 6px -6px rgba(74,159,244,1);
+	        box-shadow: inset 0 8px 6px -6px rgba(74,159,244,1);
+}
+
+#top_nav .nav_item.active:hover{
+	background: rgba(44,129,214,1);
+	-webkit-box-shadow: inset 0 8px 6px -6px rgba(74,159,244,1);
+	   -moz-box-shadow: inset 0 8px 6px -6px rgba(74,159,244,1);
+	        box-shadow: inset 0 8px 6px -6px rgba(74,159,244,1);
 }
 
 #top_nav .nav_item:hover{
-	background: rgba(44,129,214,0.5);
+	-webkit-box-shadow: inset 0 50px 50px -50px rgba(74,159,244,1);
+	   -moz-box-shadow: inset 0 50px 50px -50px rgba(74,159,244,1);
+	        box-shadow: inset 0 50px 50px -50px rgba(74,159,244,1);
 }
 
 #top_nav:after{
@@ -73,6 +89,10 @@ body{
    clear: both;
 }
 
+#content > header:first-of-type{
+	margin-bottom: -70px;
+}
+
 h1{
 	font-family: 'Lobster', cursive;
 	font-size: 56px;
@@ -86,6 +106,15 @@ h2{
 section{
 	clear: both;
 	margin-top: 10px;
+	min-height: 500px;
+}
+
+section:before{
+	display: block; 
+	content: " "; 
+	margin-top: -80px; 
+	height: 80px; 
+	visibility: hidden; 
 }
 
 span.team_name{
